Update URL for Jupyter Notebook

--- a/OpenAI API Examples.ipynb
+++ b/OpenAI API Examples.ipynb
@@ -556,8 +556,16 @@
     "\n",
     "Hopefully, by now it should be pretty obvious how all the moving parts can be put together (ideally, in appropriate classes) and the whole process ran in a loop, until the user declares the task complete.\n",
     "\n",
-    "The Jupyter Notebook can be found at ["
+    "The Jupyter Notebook can be found [here](https://github.com/massenz/hugging/blob/main/OpenAI%20API%20Examples.ipynb)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca0a84c8-7b42-4e21-b707-abee597dff17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
