Updated URL to Notebook

--- a/OpenAI API Examples.ipynb
+++ b/OpenAI API Examples.ipynb
@@ -210,6 +210,12 @@
     "        )    \n",
     "        count += 1\n",
     "        if count > retries:\n",
+    "            # We have exceeded the timeout, we need to first \n",
+    "            # cancel the run to avoid incurring further costs.\n",
+    "            client.beta.threads.runs.cancel(\n",
+    "                thread_id=thread.id,\n",
+    "                run_id=run.id,\n",
+    "            )\n",
     "            return False\n",
     "        time.sleep(0.5)\n",
     "    return run.status == \"completed\"\n",
@@ -382,10 +388,7 @@
     "\"\"\"\n",
     "\n",
     "# 0. We need an assistant\n",
-    "try:\n",
-    "    new_assistant(name, instructions)\n",
-    "except ValueError:\n",
-    "    print(\"Assistant already exists, proceeding\")\n",
+    "new_assistant(name, instructions)\n",
     "\n",
     "# 1. Get a Thread, and append a message to it\n",
     "thread = new_thread()\n",
