OpenAI File API Example notebook

--- a/OpenAI API Examples.ipynb
+++ b/OpenAI API Examples.ipynb
@@ -141,7 +141,10 @@
     "    return client.beta.assistants.create(\n",
     "                name=name,\n",
     "                instructions=instructions,\n",
-    "                tools=[{\"type\": \"code_interpreter\"}],\n",
+    "                tools=[\n",
+    "                    {\"type\": \"code_interpreter\"},\n",
+    "                    {\"type\": \"file_search\"},\n",
+    "               ],\n",
     "                model=OAI_MODEL,\n",
     "            )"
    ]
@@ -203,7 +206,8 @@
     "def wait_on_run(run, thread, timeout: int = 120, interval: float = 2) -> bool:\n",
     "    count = 0\n",
     "    retries = timeout / interval\n",
-    "    while run.status == \"queued\" or run.status == \"in_progress\":\n",
+    "    while (run.status == \"queued\" or \n",
+    "           run.status == \"in_progress\") and not run.status == \"failed\":\n",
     "        run = client.beta.threads.runs.retrieve(\n",
     "            thread_id=thread.id,\n",
     "            run_id=run.id,\n",
@@ -216,8 +220,7 @@
     "                thread_id=thread.id,\n",
     "                run_id=run.id,\n",
     "            )\n",
-    "            return False\n",
-    "        time.sleep(0.5)\n",
+    "        time.sleep(interval)\n",
     "    return run.status == \"completed\"\n",
     "\n",
     "def get_response(thread: Thread) -> str:\n",
@@ -587,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
