Updated Files notebook

--- a/OpenAI Files API.ipynb
+++ b/OpenAI Files API.ipynb
@@ -338,32 +338,12 @@
    ],
    "source": [
     "# 2. Get a Thread, and append a message to it\n",
-    "#thread = new_thread()\n",
-    "#add_msg_to_thread(thread, content)\n",
+    "thread = new_thread()\n",
+    "add_msg_to_thread(thread, content)\n",
     "\n",
     "# 4. Get a new Run, and associate it with our Thread\n",
     "#    We will use the Assistant we just created.\n",
     "run = new_run(thread=thread, asst_name=name)\n",
-    "\n",
-    "def wait_on_run(run, thread, timeout: int = 120, interval: float = 2) -> bool:\n",
-    "    count = 0\n",
-    "    retries = timeout / interval\n",
-    "    while (run.status == \"queued\" or \n",
-    "           run.status == \"in_progress\") and not run.status == \"failed\":\n",
-    "        run = client.beta.threads.runs.retrieve(\n",
-    "            thread_id=thread.id,\n",
-    "            run_id=run.id,\n",
-    "        )    \n",
-    "        count += 1\n",
-    "        if count > retries:\n",
-    "            # We have exceeded the timeout, we need to first \n",
-    "            # cancel the run to avoid incurring further costs.\n",
-    "            client.beta.threads.runs.cancel(\n",
-    "                thread_id=thread.id,\n",
-    "                run_id=run.id,\n",
-    "            )\n",
-    "        time.sleep(interval)\n",
-    "    return run.status == \"completed\"\n",
     "\n",
     "# 5. We then ask GPT for advice\n",
     "if wait_on_run(run, thread, timeout=360):\n",
